force-app/main/default/objects/Quote/fields/ZRH_RegistroAvancePaquetesDeConvenios__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvancePaquetesDeConvenios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paquetes de convenios</label>
    <type>Checkbox</type>
</CustomField>