force-app/main/default/objects/Quote/fields/ZRH_RegistroAvancePlanes__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvancePlanes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planes</label>
    <type>Checkbox</type>
</CustomField>