force-app/main/default/objects/Quote/fields/ZRH_RegistroAvancePreexistencias__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvancePreexistencias__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preexistencias</label>
    <type>Checkbox</type>
</CustomField>