force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceRequisitosAsegurabilid__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceRequisitosAsegurabilid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requisitos de Asegurabilidad</label>
    <type>Checkbox</type>
</CustomField>