force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceRoles__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceRoles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roles</label>
    <type>Checkbox</type>
</CustomField>