force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceSobreprima__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceSobreprima__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sobreprima</label>
    <type>Checkbox</type>
</CustomField>