force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceTablaRequisitosMedicos__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceTablaRequisitosMedicos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tabla de Requisitos Medicos</label>
    <type>Checkbox</type>
</CustomField>