force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceTarificacion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceTarificacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarificación</label>
    <type>Checkbox</type>
</CustomField>