force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceTopes__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceTopes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Topes</label>
    <type>Checkbox</type>
</CustomField>