force-app/main/default/objects/Quote/fields/ZRH_RenovacionFlag__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RenovacionFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado para indicar se la cotizacion se trata de una Renovación o de una Emissión. Usados para procesos técnicos que sincronizaron las pólizas entre Salesforce y el Core</description>
    <label>Renovación</label>
    <type>Checkbox</type>
</CustomField>