force-app/main/default/objects/Quote/fields/ZRH_RenovacionSincronizada__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RenovacionSincronizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica cuando la sincronización de la cotización con AS400 está finalizada</description>
    <label>Renovación Sincronizada</label>
    <type>Checkbox</type>
</CustomField>