force-app/main/default/objects/Quote/fields/ZRH_RespuestaAPIOficPolizasRenovacion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RespuestaAPIOficPolizasRenovacion__c</fullName>
    <label>Respuesta API Ofic. Pólizas Renovación</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>