force-app/main/default/objects/Quote/fields/ZRH_SolicitudCorredorCliente__c.field-meta.xml
<CustomField>
    <fullName>ZRH_SolicitudCorredorCliente__c</fullName>
    <description>Campo que llena el área comercial al solicitar una recotización con detalles de la solicitud del corredor/cliente</description>
    <label>Solicitud del Corredor/Cliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>