force-app/main/default/objects/Quote/fields/ZRH_SubEstado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_SubEstado__c</fullName>
    <description>Indica el sub estado, aporta un nivel mas de detalle que el campo estado.</description>
    <label>Sub Estado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SE-01</fullName>
                <label>Sinestrialidad</label>
            </value>
            <value>
                <fullName>SE-02</fullName>
                <label>Sospecha de Fraude</label>
            </value>
            <value>
                <fullName>SE-03</fullName>
                <label>Apetito de Riesgo</label>
            </value>
            <value>
                <fullName>SE-04</fullName>
                <label>Cuenta Vigente</label>
            </value>
            <value>
                <fullName>SE-05</fullName>
                <label>Reservada por otro corredor</label>
            </value>
            <value>
                <fullName>SE-06</fullName>
                <label>Falta de informacion</label>
            </value>
            <value>
                <fullName>SE-07</fullName>
                <label>Falta de Tiempo UW</label>
            </value>
            <value>
                <fullName>SE-08</fullName>
                <label>Otra</label>
            </value>
            <value>
                <fullName>SE-09</fullName>
                <label>Motivo</label>
            </value>
            <value>
                <fullName>SE-10</fullName>
                <label>Cia que ganó</label>
            </value>
            <value>
                <fullName>SE-11</fullName>
                <label>Prima de cierre</label>
            </value>
            <value>
                <fullName>SE-12</fullName>
                <label>Corredor que ganó</label>
            </value>
            <value>
                <fullName>SE-13</fullName>
                <label>Se cumplió fecha de caducidad</label>
            </value>
            <value>
                <fullName>SE-14</fullName>
                <label>Aceptada por Cliente</label>
            </value>
            <value>
                <fullName>SE-15</fullName>
                <label>Configuración Completada</label>
            </value>
            <value>
                <fullName>SE-16</fullName>
                <label>Renovación Sincronizada</label>
            </value>
            <value>
                <fullName>SE-17</fullName>
                <label>Renovación Sincronizada con Error</label>
            </value>
            <value>
                <fullName>SE-18</fullName>
                <label>Renovación en proceso de Sincronización</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>