force-app/main/default/objects/Quote/fields/ZRH_SuscriptorAsignado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_SuscriptorAsignado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suscriptor Asignado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>