force-app/main/default/objects/Quote/fields/ZRH_TipoCotizacion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoCotizacion__c</fullName>
    <description>Identifica si la cotización es de un Holding o una empresa Contratante</description>
    <formula>IF(ISBLANK(ZRH_CotizacionHolding__c), &quot;Holding&quot;, &quot;Contratante&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Cotización</label>
    <type>Text</type>
</CustomField>