force-app/main/default/objects/Quote/fields/ZRH_TipoTopePreexistencias__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoTopePreexistencias__c</fullName>
    <label>Tipo de Tope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tope Global (A nivel de Póliza)</fullName>
            </value>
            <value>
                <fullName>Tope por Patología (A nivel de Cobertura)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>