force-app/main/default/objects/Quote/fields/ZRH_TopeTodasPreexistencias__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TopeTodasPreexistencias__c</fullName>
    <label>Tope para todas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Todas</fullName>
            </value>
            <value>
                <fullName>Solo las indicadas por la Compañía</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>