force-app/main/default/objects/Quote/fields/ZRH_ValoresEstado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ValoresEstado__c</fullName>
    <description>Campo de Texto que muestra los estados de la cotizacion (utilizado en flow &quot;Cambiar Estado Cotizacion&quot;)</description>
    <formula>IF(ISPICKVAL(Status,&apos;E-01&apos;),&apos;Reserva&apos;,
		IF(ISPICKVAL(Status,&apos;E-02&apos;),&apos;Ingreso&apos;,
					IF(ISPICKVAL(Status,&apos;E-03&apos;),&apos;Documentación Faltante&apos;,
								IF(ISPICKVAL(Status,&apos;E-04&apos;),&apos;Documentación Enviada&apos;,
											IF(ISPICKVAL(Status,&apos;E-05&apos;),&apos;Cotizada&apos;,
														IF(ISPICKVAL(Status,&apos;E-06&apos;),&apos;Declinada&apos;,
																	IF(ISPICKVAL(Status,&apos;E-07&apos;),&apos;Enviada al Corredor&apos;,
																				IF(ISPICKVAL(Status,&apos;E-08&apos;),&apos;Recotizar&apos;,
																							IF(ISPICKVAL(Status,&apos;E-09&apos;),&apos;Ganada&apos;,
																										IF(ISPICKVAL(Status,&apos;E-10&apos;),&apos;Perdida&apos;,
					&quot;&quot;))))))))))</formula>
    <label>Valores Estado</label>
    <type>Text</type>
</CustomField>