force-app/main/default/objects/Quote/fields/ZRH_VersionQuote__c.field-meta.xml
<CustomField>
    <fullName>ZRH_VersionQuote__c</fullName>
    <description>Campo que almacena la version de la Cotización para una Oportunidad</description>
    <label>Versión cotización</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>