force-app/main/default/objects/Quote/fields/ZRH_VigenciaInicio__c.field-meta.xml
<CustomField>
    <fullName>ZRH_VigenciaInicio__c</fullName>
    <description>Vigencia inicio</description>
    <label>Vigencia Inicio</label>
    <type>Date</type>
</CustomField>