force-app/main/default/objects/Quote/fields/ZRH_VigenciaTermino__c.field-meta.xml
<CustomField>
    <fullName>ZRH_VigenciaTermino__c</fullName>
    <description>Vigencia Término</description>
    <label>Vigencia Término</label>
    <type>Date</type>
</CustomField>