force-app/main/default/objects/Quote/fields/ZRHCreadoSuscriptor__c.field-meta.xml
<CustomField>
    <fullName>ZRHCreadoSuscriptor__c</fullName>
    <formula>IF( ZRH_SuscriptorAsignado__c = $User.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creado por suscriptor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>