force-app/main/default/objects/Quote/validationRules/ZHR_NombreNoEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>ZHR_NombreNoEditable</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				ISCHANGED(Name),
					NOT(ISCHANGED(ZRH_VersionQuote__c))	
				)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Nombre de la cotización no editable</errorMessage>
</ValidationRule>