force-app/main/default/objects/Quote/validationRules/ZHR_ValidacionCampoSuscriptorNoEditable.validationRule-meta.xml
<ValidationRule>
    <fullName>ZHR_ValidacionCampoSuscriptorNoEditable</fullName>
    <active>true</active>
    <description>Validación para poder evitar que usuarios que no sean el Jefe de Suscripción o Subgerente de Suscripción puedan asignar un suscriptor</description>
    <errorConditionFormula>AND(
ISCHANGED(vlocity_ins__UnderwriterId__c),
NOT($UserRole.DeveloperName = &quot;ZRH_JefeSuscripcion&quot;),
NOT($UserRole.DeveloperName = &quot;ZRH_SubgerenteSuscripcion&quot;),
NOT($Profile.Name =&quot;Administrador del sistema&quot;)
)</errorConditionFormula>
    <errorMessage>Solo Jefe de Suscripción y Subgerente Suscripción pueden asignar un Suscriptor</errorMessage>
</ValidationRule>