force-app/main/default/objects/Quote/validationRules/ZRH_ComisionCorredorMenorACien.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_ComisionCorredorMenorACien</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   ZRH_ComisionCorredor__c &gt; 1.0,
   ZRH_ComisionCorredor__c &lt; 0.0
)</errorConditionFormula>
    <errorDisplayField>ZRH_ComisionCorredor__c</errorDisplayField>
    <errorMessage>Ingresar un valor entre 0 y 100</errorMessage>
</ValidationRule>