force-app/main/default/objects/Quote/validationRules/ZRH_ValidacionCambioEstadoDeResAIngr.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_ValidacionCambioEstadoDeResAIngr</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    /*Si el bypass no esta activado*/

    NOT($Setup.ZRH_Bypass__c.ZRH_DesactivarValidationRules__c ),
    
    /*Y queremos pasar del estado Reserva a Perdida se tiene que cumplir que los campos esten populados o que el rol sea uno de 
    los tres que estan en la regla*/

    TEXT(PRIORVALUE(Status)) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_001.ZRH_ValorAPI__c,
    TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_002.ZRH_ValorAPI__c,
    ISCHANGED(Status),
    
    
    NOT($UserRole.DeveloperName == &quot;ZRH_JefeProposition&quot;),
    NOT($UserRole.DeveloperName == &quot;ZRH_SubgerenteProposition&quot;),
    NOT($UserRole.DeveloperName == &quot;ZRH_SubgerenteComercial&quot;),
    
    OR(
       IF( ZRH_EsLicitacion__c, ISBLANK(ZRH_FechaLimitePregunta__c), false),
       ISBLANK(ZRH_FechaSolicitudEntrega__c),
       ISBLANK(ZRH_VigenciaInicio__c),
       ISBLANK(ZRH_VigenciaTermino__c),
       ISBLANK(TEXT(ZRH_Moneda__c)),
       ISBLANK(ZRH_NroAsegurados__c), 
       ISBLANK(ZRH_PrimaTarget__c), 
       ISBLANK(ZRH_ComisionCorredor__c), 
       ISBLANK(ZRH_Observaciones__c) 
       )
    
    )</errorConditionFormula>
    <errorMessage>Para poder pasar a estado Ingreso faltan completar los siguientes campos:

- Comisión Corredor
- Fecha Límite Pregunta
- Fecha Solicitud Entrega
- Moneda
- Número Asegurados
- Observaciones
- Prima Target
- Vigencia Inicio
- Vigencia Término</errorMessage>
</ValidationRule>