force-app/main/default/objects/Quote/validationRules/ZRH_ValidacionCambioEstadoDesdeCotizada.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_ValidacionCambioEstadoDesdeCotizada</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    /*Si el bypass no esta activado*/
    NOT($Setup.ZRH_Bypass__c.ZRH_DesactivarValidationRules__c ),
    
    /*Y queremos pasar del estado Cotizada, se debe cumplir que pasamos al estado Enviada al Corredor o Recotizada o Ganada o Perdida o que el rol 
    sea uno de los tres que estan en la regla*/

    TEXT(PRIORVALUE(Status)) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_005.ZRH_ValorAPI__c,
    ISCHANGED(Status),

    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_007.ZRH_ValorAPI__c),
    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_008.ZRH_ValorAPI__c),
    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_009.ZRH_ValorAPI__c),
    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_010.ZRH_ValorAPI__c),

    NOT($UserRole.DeveloperName == &quot;ZRH_JefeProposition&quot;),
    NOT($UserRole.DeveloperName == &quot;ZRH_SubgerenteProposition&quot;),
    NOT($UserRole.DeveloperName == &quot;ZRH_SubgerenteComercial&quot;)
    
    )</errorConditionFormula>
    <errorMessage>Solo se puede pasar de Cotizada a  Enviada al Corredor, Recotizada, Ganada o Perdida.</errorMessage>
</ValidationRule>