force-app/main/default/objects/Quote/validationRules/ZRH_ValidacionCambioEstadoDesdeEnvAlCorr.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_ValidacionCambioEstadoDesdeEnvAlCorr</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    /*Si el bypass no esta activado*/
    NOT($Setup.ZRH_Bypass__c.ZRH_DesactivarValidationRules__c ),
    
    /*Y queremos pasar del estado Enviada al Corredor, se debe cumplir que pasamos al estado Recotizar, Ganada o Perdida o que el rol sea uno de 
    los tres que estan en la regla*/
    TEXT(PRIORVALUE(Status)) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_007.ZRH_ValorAPI__c, 
    ISCHANGED(Status),
    
    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_008.ZRH_ValorAPI__c),
    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_009.ZRH_ValorAPI__c),
    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_010.ZRH_ValorAPI__c),
    
    NOT($UserRole.DeveloperName == &quot;ZRH_JefeProposition&quot;),
    NOT($UserRole.DeveloperName == &quot;ZRH_SubgerenteProposition&quot;),
    NOT($UserRole.DeveloperName == &quot;ZRH_SubgerenteComercial&quot;) 

    )</errorConditionFormula>
    <errorMessage>Solo se puede pasar de Enviada al Corredor a Recotizar, Ganada o Perdida.</errorMessage>
</ValidationRule>