force-app/main/default/objects/Quote/validationRules/ZRH_ValidacionCambioEstadoDesdeIngreso.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_ValidacionCambioEstadoDesdeIngreso</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    /*Si el bypass no esta activado*/
    NOT($Setup.ZRH_Bypass__c.ZRH_DesactivarValidationRules__c ),
    NOT(ZRH_BypassReglaValidacionActivo__c),
    /*Y queremos pasar del estado reserva, se debe cumplir que pasamos al estado Doc. Faltante o Cotizada o Declinada o que el rol sea uno de los 
    tres que estan en la regla*/

    TEXT(PRIORVALUE(Status)) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_002.ZRH_ValorAPI__c,
    ISCHANGED(Status),
    
    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_003.ZRH_ValorAPI__c),
    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_005.ZRH_ValorAPI__c),
    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_006.ZRH_ValorAPI__c),
           
    NOT($UserRole.DeveloperName == &quot;ZRH_JefeProposition&quot;),
    NOT($UserRole.DeveloperName == &quot;ZRH_SubgerenteProposition&quot;),
    NOT($UserRole.DeveloperName == &quot;ZRH_SubgerenteComercial&quot;)

    )</errorConditionFormula>
    <errorMessage>Solo se puede pasar de Ingreso a Documentacion Faltante, Cotizada o Declinada.</errorMessage>
</ValidationRule>