force-app/main/default/objects/Quote/validationRules/ZRH_ValidacionCambioEstadoDesdeRecotizar.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_ValidacionCambioEstadoDesdeRecotizar</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    /*Si el bypass no esta activado*/
    NOT($Setup.ZRH_Bypass__c.ZRH_DesactivarValidationRules__c ),
    NOT(ZRH_BypassReglaValidacionActivo__c),

    /*Y queremos pasar del estado Recotizar, se debe cumplir que pasamos al estado Cotizada o que el rol sea uno de 
    los tres que estan en la regla*/
    TEXT(PRIORVALUE(Status)) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_008.ZRH_ValorAPI__c, 
    ISCHANGED(Status), 
    
    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_005.ZRH_ValorAPI__c),
    
    NOT($UserRole.DeveloperName == &quot;ZRH_JefeProposition&quot;),
    NOT($UserRole.DeveloperName == &quot;ZRH_SubgerenteProposition&quot;),
    NOT($UserRole.DeveloperName == &quot;ZRH_SubgerenteComercial&quot;) 
    )</errorConditionFormula>
    <errorMessage>Solo se puede pasar de Recotizar a Cotizada.</errorMessage>
</ValidationRule>