force-app/main/default/objects/Quote/validationRules/ZRH_ValidacionCambioEstadoDesdeReserva.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_ValidacionCambioEstadoDesdeReserva</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    /*Si el bypass no esta activado*/

    NOT($Setup.ZRH_Bypass__c.ZRH_DesactivarValidationRules__c ),
    
    /*Y queremos pasar del estado Reserva, se debe cumplir que pasamos al estado Ingreso o Perdida o que el rol sea uno de los tres 
    que estan en la regla*/

    TEXT(PRIORVALUE(Status)) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_001.ZRH_ValorAPI__c,
    ISCHANGED(Status),

    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_002.ZRH_ValorAPI__c),
    NOT(TEXT(Status) == $CustomMetadata.ZRH_MapaDeValores__mdt.M_010.ZRH_ValorAPI__c),

    NOT($UserRole.DeveloperName == &quot;ZRH_JefeProposition&quot;),
    NOT($UserRole.DeveloperName == &quot;ZRH_SubgerenteProposition&quot;),
    NOT($UserRole.DeveloperName == &quot;ZRH_SubgerenteComercial&quot;)
   
    )</errorConditionFormula>
    <errorMessage>Solo se puede pasar de Reserva a Ingreso o Perdida.</errorMessage>
</ValidationRule>